# lottery_applet

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
utils/: ssq.py
